ASSUMPTIONS:
- non clashing function names
- functions can not have more than 6 arguments

Changes in 3ac code:
    changed way of procedure call - used predefined registers
    changed way of returning value - used predefined registers
    rbp -> %rbp
    stackptr -> %rsp
    offset starts from positive value (not 0 i.e. includes cur var size)

Note - final output is stored in out.s (currently checking on test_1.java)

Completed:
- prologue
- return instruction with value
- OPERATORS:
    - assignment
    - add/subtract (unary as well)
    - shift (<< / >>), bitwise and (&), or (|), xor (^)
- CONTROL FLOW:
    - label
    - unconditional jump
    - conditional jump
- FUNCTION CALL:
    - procedure call
    - return instruction

- TODO: multiply/divide
- TODO: register allocation
- TODO: q vs l type instructions
- TODO: registers value change after function call
- TODO: change 3ac code for && and || and ! to fit under
        assumption for conditional jump
- TODO: print
- TODO: string literals
- TODO: arrays
- TODO: objects